# shapefile-to-geojson

./: Cargo.toml  LICENSE  README.md
data/line/: line.dbf  line.shp
data/point/: point.dbf  point.shp
data/polygon/: polygon.shp  polygon.shx
src/: lib.rs  main.rs
