[package]
name = "shapefile-to-geojson"
version = "0.1.2"
edition = "2021"
authors = ["Tomoro Saito <s.tomoro0726@gmail.com>"]
license = "MIT"
description = "shapefile convert to geojson"
repository = "https://github.com/Tomoro0726/shapefile-to-geojson"



[dependencies]
futures = "0.3"
geojson = "0.24"
indicatif = "0.17"
regex = "1.5"
serde_json = "1.0"
shapefile = "0.5"
tokio = { version = "1.0", features = ["full"] }
dbase = "0.3"
num_cpus = "1.13"